--- a/Commercial Janitorial Services/client/index.html
+++ b/Commercial Janitorial Services/client/index.html
@@ -312,7 +312,7 @@
                         <div class="flex items-center justify-between mb-4">
                             <div
                                 class="w-12 h-12 rounded-2xl bg-purple-50 dark:bg-purple-900/30 text-purple-600 flex items-center justify-center">
-                                <i class="fa-solid fa-shield-check text-xl"></i>
+                                <i class="fa-solid fa-circle-check text-xl"></i>
                             </div>
                         </div>
                         <p class="text-sm font-medium text-gray-500 mb-1">Active Plans</p>
