--- a/Commercial Janitorial Services/blog.html
+++ b/Commercial Janitorial Services/blog.html
@@ -42,7 +42,25 @@
                 <span class="text-2xl font-bold font-heading dark:text-white">NovaSite</span>
             </a>
             <div class="hidden lg:flex items-center gap-8">
-                <a href="index.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Home</a>
+                <div class="relative group" id="home-menu-container">
+                    <button id="home-dropdown-toggle"
+                        class="flex items-center gap-1 hover:text-primary-500 transition-colors py-4 dark:text-gray-300">
+                        <span>Home</span>
+                        <i class="fa-solid fa-chevron-down text-[10px] transition-transform duration-300"></i>
+                    </button>
+                    <!-- Home Dropdown -->
+                    <div id="home-dropdown"
+                        class="absolute left-0 top-full w-56 bg-white dark:bg-slate-800 rounded-2xl shadow-xl border border-gray-100 dark:border-gray-700 py-2 hidden z-50 animate-fade-in">
+                        <a href="index.html"
+                            class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-gray-700 dark:text-gray-200 hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:text-primary-600 dark:hover:text-primary-400 transition-all border-l-4 border-transparent">
+                            <span>Modern (Home 1)</span>
+                        </a>
+                        <a href="index-2.html"
+                            class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-gray-700 dark:text-gray-200 hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:text-primary-600 dark:hover:text-primary-400 transition-all border-l-4 border-transparent">
+                            <span>Advanced (Home 2)</span>
+                        </a>
+                    </div>
+                </div>
                 <a href="about.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">About</a>
                 <a href="services.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Services</a>
                 <a href="blog.html" class="text-primary-600 font-medium">Blog</a>
@@ -57,9 +75,38 @@
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
-                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
-                    <span>Login</span>
-                </a>
+                <!-- Login Dropdown -->
+                <div class="relative hidden lg:flex items-stretch">
+                    <div class="btn-split-unit btn-split-container">
+                        <a href="login.html" id="login-nav-link" class="btn btn-header-left flex items-center">
+                            <span>Login</span>
+                        </a>
+                        <button id="login-dropdown-toggle"
+                            class="btn btn-header-right flex items-center justify-center px-3">
+                            <i class="fa-solid fa-chevron-down text-xs transition-transform duration-300"></i>
+                        </button>
+                    </div>
+                    <!-- Dropdown Menu -->
+                    <div id="login-dropdown"
+                        class="absolute right-0 top-full mt-2 w-64 bg-white dark:bg-slate-800 rounded-2xl shadow-2xl border border-gray-100 dark:border-gray-700 py-3 hidden z-50 animate-fade-in">
+                        <a href="client/index.html"
+                            class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-gray-700 dark:text-gray-200 hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:text-primary-600 dark:hover:text-primary-400 transition-all">
+                            <div
+                                class="w-8 h-8 rounded-lg bg-green-100 dark:bg-green-900/30 flex items-center justify-center">
+                                <i class="fa-solid fa-user-tie text-green-600"></i>
+                            </div>
+                            <span>Client Dashboard</span>
+                        </a>
+                        <a href="admin/index.html"
+                            class="flex items-center gap-3 px-4 py-3 text-sm font-medium text-gray-700 dark:text-gray-200 hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:text-primary-600 dark:hover:text-primary-400 transition-all">
+                            <div
+                                class="w-8 h-8 rounded-lg bg-purple-100 dark:bg-purple-900/30 flex items-center justify-center">
+                                <i class="fa-solid fa-user-shield text-purple-600"></i>
+                            </div>
+                            <span>Admin Dashboard</span>
+                        </a>
+                    </div>
+                </div>
                 <button id="mobile-menu-btn" class="lg:hidden btn-icon">
                     <i class="fa-solid fa-bars text-lg"></i>
                 </button>
@@ -70,7 +117,8 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="fixed inset-0 z-[60] hidden">
         <div class="absolute inset-0 bg-black/50 backdrop-blur-sm"></div>
-        <div class="absolute right-0 top-0 h-full w-4/5 max-w-sm bg-white dark:bg-dark-body p-8 shadow-2xl">
+        <div
+            class="absolute right-0 top-0 h-full w-4/5 max-w-sm bg-white dark:bg-dark-body p-8 shadow-2xl overflow-y-auto no-scrollbar">
             <div class="flex items-center justify-between mb-8">
                 <div class="flex items-center gap-2">
                     <div class="w-8 h-8 logo-box rounded-lg flex items-center justify-center text-white font-bold">
@@ -82,14 +130,48 @@
                 </button>
             </div>
             <div class="space-y-4">
-                <a href="index.html" class="block text-lg font-medium dark:text-gray-300">Home</a>
+                <!-- Mobile Home Dropdown -->
+                <div class="space-y-2">
+                    <div class="flex items-center justify-between">
+                        <span class="text-lg font-medium dark:text-gray-300">Home</span>
+                        <button id="mobile-home-toggle" class="p-2 dark:text-gray-300">
+                            <i class="fa-solid fa-chevron-down text-sm transition-transform duration-300"></i>
+                        </button>
+                    </div>
+                    <div id="mobile-home-dropdown" class="hidden space-y-2 pl-4 border-l-2 border-primary-500/20 ml-2">
+                        <a href="index.html"
+                            class="block py-2 text-gray-600 dark:text-gray-400 hover:text-primary-500 font-medium transition-colors">Modern
+                            (Home 1)</a>
+                        <a href="index-2.html"
+                            class="block py-2 text-gray-600 dark:text-gray-400 hover:text-primary-500 font-medium transition-colors">Advanced
+                            (Home 2)</a>
+                    </div>
+                </div>
                 <a href="about.html" class="block text-lg font-medium dark:text-gray-300">About</a>
                 <a href="services.html" class="block text-lg font-medium dark:text-gray-300">Services</a>
                 <a href="blog.html" class="block text-lg font-medium text-primary-500">Blog</a>
                 <a href="pricing.html" class="block text-lg font-medium dark:text-gray-300">Pricing</a>
                 <a href="contact.html" class="block text-lg font-medium dark:text-gray-300">Contact</a>
                 <hr class="border-gray-100 dark:border-gray-800">
-                <a href="login.html" class="btn btn-nova btn-full">Login</a>
+                <!-- Mobile Login Dropdown -->
+                <div class="pt-2">
+                    <div class="flex items-center gap-2">
+                        <a href="login.html" class="btn btn-nova flex-1">Login</a>
+                        <button id="mobile-login-toggle"
+                            class="btn btn-secondary w-12 h-12 p-0 flex items-center justify-center">
+                            <i class="fa-solid fa-chevron-down text-xs transition-transform duration-300"></i>
+                        </button>
+                    </div>
+                    <div id="mobile-login-dropdown"
+                        class="hidden mt-2 space-y-1 pl-4 border-l-2 border-primary-500/20 ml-2">
+                        <a href="client/index.html"
+                            class="block py-3 text-gray-600 dark:text-gray-400 hover:text-primary-500 font-medium transition-colors">Client
+                            Dashboard</a>
+                        <a href="admin/index.html"
+                            class="block py-3 text-gray-600 dark:text-gray-400 hover:text-primary-500 font-medium transition-colors">Admin
+                            Dashboard</a>
+                    </div>
+                </div>
 
                 <!-- Mobile-only Preferences -->
                 <div class="mt-8 pt-6 border-t border-gray-100 dark:border-gray-800">
@@ -386,14 +468,14 @@
 
             // Render Grid
             blogGrid.innerHTML = paginatedPosts.map(post => `
-                <article class="group bg-white dark:bg-dark-card rounded-[2rem] border border-gray-100 dark:border-gray-800 overflow-hidden hover:shadow-2xl transition-all duration-300 w-full md:w-[calc(50%-1.25rem)] lg:w-[calc(33.333%-1.667rem)] flex-shrink-0">
+                <article class="group bg-white dark:bg-dark-card rounded-[2rem] border border-gray-100 dark:border-gray-800 overflow-hidden hover:shadow-2xl transition-all duration-300 w-full md:w-[calc(50%-1.25rem)] lg:w-[calc(33.333%-1.667rem)] flex-shrink-0 flex flex-col">
                     <div class="relative overflow-hidden aspect-video">
                         <img src="${post.image}" alt="${post.title}" 
                              class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500"
                              onerror="this.src='assets/images/hero_cleaning.png'">
                         <span class="absolute top-4 left-4 px-3 py-1 bg-white/90 dark:bg-dark-card/90 backdrop-blur-md rounded-lg text-xs font-bold ${post.badgeColor}">${post.category}</span>
                     </div>
-                    <div class="p-8">
+                    <div class="p-8 flex flex-col flex-1">
                         <div class="flex items-center space-x-3 text-sm text-gray-500 dark:text-gray-400 mb-4">
                             <span><i class="fa-solid fa-calendar mr-2"></i>${post.date}</span>
                             <span><i class="fa-solid fa-user mr-2"></i>By ${post.author}</span>
@@ -401,7 +483,7 @@
                         <h3 class="text-xl font-bold mb-4 dark:text-white group-hover:text-primary-500 transition-colors">
                             ${post.title}</h3>
                         <p class="text-gray-500 dark:text-gray-400 text-sm mb-6 line-clamp-2">${post.excerpt}</p>
-                        <a href="blog-details.html" class="flex items-center space-x-2 text-primary-600 font-bold">
+                        <a href="blog-details.html" class="flex items-center space-x-2 text-primary-600 font-bold mt-auto">
                             <span>Read Article</span>
                             <i class="fa-solid fa-arrow-right text-sm"></i>
                         </a>
