--- a/Commercial Janitorial Services/admin/index.html
+++ b/Commercial Janitorial Services/admin/index.html
@@ -259,6 +259,11 @@
 
             <!-- Scrollable Content -->
             <div class="flex-1 overflow-y-auto p-6">
+                <div class="mb-8">
+                    <h1 class="text-2xl font-bold font-heading dark:text-white">Welcome Back!</h1>
+                    <p class="text-sm text-gray-500 dark:text-gray-400">Overview of your business performance today.</p>
+                </div>
+
                 <!-- Stats Grid -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
                     <div
