--- a/Commercial Janitorial Services/client/index.html
+++ b/Commercial Janitorial Services/client/index.html
@@ -262,6 +262,12 @@
 
             <!-- Scrollable Content -->
             <div class="flex-1 overflow-y-auto p-4 sm:p-6">
+                <div class="mb-6">
+                    <h1 class="text-2xl font-bold font-heading dark:text-white">Welcome Back!</h1>
+                    <p class="text-sm text-gray-500 dark:text-gray-400">Here's what's happening with your services
+                        today.</p>
+                </div>
+
                 <!-- Welcome Banner -->
                 <div
                     class="mb-8 p-6 sm:p-8 rounded-2xl sm:rounded-[2rem] bg-gradient-to-br from-primary-600 to-primary-800 text-white relative overflow-hidden shadow-2xl shadow-primary-500/20">
